[gd_scene load_steps=11 format=3 uid="uid://vbbscy6ty36h"]

[ext_resource type="Script" path="res://characters/_base_character.gd" id="1_v0er0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kxbsm"]
size = Vector2(25, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6ldg"]
size = Vector2(30, 47)

[sub_resource type="SpriteFrames" id="SpriteFrames_fdsme"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2guqs"]

[sub_resource type="SpriteFrames" id="SpriteFrames_n8fer"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xtlo6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_lut7r"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vvcv3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_auap2"]

[node name="_BaseCharacter" type="CharacterBody2D"]
script = ExtResource("1_v0er0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 18)
shape = SubResource("RectangleShape2D_kxbsm")

[node name="HurtBoxArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxArea"]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_n6ldg")

[node name="CompositeAnimatedSprite" type="Node2D" parent="."]

[node name="Weapon_AnimatedSprite2D" type="AnimatedSprite2D" parent="CompositeAnimatedSprite"]
sprite_frames = SubResource("SpriteFrames_fdsme")

[node name="Body_AnimatedSprite2D" type="AnimatedSprite2D" parent="CompositeAnimatedSprite"]
sprite_frames = SubResource("SpriteFrames_2guqs")

[node name="Hair_AnimatedSprite2D" type="AnimatedSprite2D" parent="CompositeAnimatedSprite"]
sprite_frames = SubResource("SpriteFrames_n8fer")

[node name="Shirt_AnimatedSprite2D" type="AnimatedSprite2D" parent="CompositeAnimatedSprite"]
sprite_frames = SubResource("SpriteFrames_xtlo6")

[node name="Pants_AnimatedSprite2D" type="AnimatedSprite2D" parent="CompositeAnimatedSprite"]
sprite_frames = SubResource("SpriteFrames_lut7r")

[node name="Belt_AnimatedSprite2D" type="AnimatedSprite2D" parent="CompositeAnimatedSprite"]
sprite_frames = SubResource("SpriteFrames_vvcv3")

[node name="Wound_AnimatedSprite2D" type="AnimatedSprite2D" parent="CompositeAnimatedSprite"]
sprite_frames = SubResource("SpriteFrames_auap2")
